TASK: Fix color contrast issue in DimensionSwitcher
Fixes: #587

--- a/packages/react-ui-components/src/DropDown/style.css
+++ b/packages/react-ui-components/src/DropDown/style.css
@@ -25,6 +25,9 @@
         outline: unset;
     }
 }
+.dropDown__btn--open {
+
+}
 .dropDown__btnLabel {
     composes: reset from './../reset.css';
     margin-right: .5em;
@@ -51,4 +54,21 @@
 }
 .dropDown__contents--isOpen {
     display: block;
+}
+.dropDown--default {
+
+}
+.dropDown--darker {
+    > .dropDown__btn--open {
+        background-color: var(--brandColorsContrastDarker);
+    }
+
+    > .dropDown__contents {
+        background-color: var(--brandColorsContrastDarker);
+    }
+}
+.dropDown--padded {
+    > .dropDown__contents {
+        padding: var(--spacing);
+    }
 }
